feature/acceptloan/src/main/java/com/example/afinal/feature/acceptloan/AcceptLoanRouter.kt
package com.example.afinal.feature.acceptloan

interface AcceptLoanRouter {
    fun close()
    fun openAddresses()
}