feature/rejectloan/src/main/java/com/example/afinal/feature/rejectloan/RejectLoanRouter.kt
package com.example.afinal.feature.rejectloan

interface RejectLoanRouter {
    fun close()
}